[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "welch-allyn-bp100-client"
version = "2026.3.0"
dependencies = [
  "bleak",
  "bleak-retry-connector",
]
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
]

[project.scripts]
wa = "bp100.cli:run"

[tool.setuptools]
packages = ["bp100"]

[tool.pdm.scripts]
test-task = "echo 'Hello World'"
